--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,8 @@
         "psr-4": {
             "Bone\\BoneUserApi\\": "src/"
         }
+    },
+    "suggest": {
+        "delboy1978uk/bone-open-api": "Open API documentation",
     }
 }
