fix broken json 🤪

--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,6 @@
         }
     },
     "suggest": {
-        "delboy1978uk/bone-open-api": "Open API documentation",
+        "delboy1978uk/bone-open-api": "Open API documentation"
     }
 }
